charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-go-app
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: 198b0948-6e16-4e90-9e3a-9323625dac2b.k8s.civo.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: demo-go-app
              port:
                number: 8080
  tls:
    - hosts:
        - 198b0948-6e16-4e90-9e3a-9323625dac2b.k8s.civo.com
      secretName: civo-tls
